parser/sample_tests/ours/bad7.txt

*** Error line 5.
    return isSpotted;
           ^^^^^^^^^
*** syntax error

